Logging, registering and updating seems to work